# histogram_bmi

./: CMakeLists.txt  README.md  build.sh  readme.md  run.sh
sources/: histogram
src/: main.cpp
