cmake_minimum_required(VERSION 3.31)
project(histogram VERSION 0.0.2 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/main.cpp)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/sources/histogram DESTINATION ${CMAKE_BINARY_DIR})